[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/forged/scene_manager/transitions/FVShutterTransition.gd" type="Script" id=1]

[node name="FVShutterTransition" type="CanvasLayer"]
layer = 100
script = ExtResource( 1 )

[node name="TopColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotColorRect" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
